# ai-trader

./: pyproject.toml  requirements.txt
ai_trader/: __init__.py  cli.py
ai_trader/backtesting/strategies/: base.py  indicators.py
ai_trader/backtesting/strategies/classic/: adaptive_rsi.py  alpharsi_pro.py  bbands.py  hybrid_alpharsi.py  macd.py  momentum.py  risk_averse.py  roc.py  rsi.py  sma.py  turtle.py  vcp.py
ai_trader/backtesting/strategies/portfolio/: multi_bbands.py  roc_rotation.py  triple_rsi.py
ai_trader/mcp/tools/: backtest.py
ai_trader/utils/: __init__.py  backtest.py
tests/integration/: test_backtest_workflow.py
tests/unit/cli/: test_cli.py
tests/unit/utils/: test_backtest.py
